[gd_scene format=4 uid="uid://b72lw5m0t0ajd"]

[ext_resource type="PackedScene" uid="uid://bwkqvmxk8oye2" path="res://Scenes/map.tscn" id="1_0nejw"]
[ext_resource type="Script" uid="uid://og7o6gsnr2c5" path="res://GDscripts/game_world.gd" id="1_qvgq0"]
[ext_resource type="PackedScene" uid="uid://bcj06yl0bl6fn" path="res://Scenes/player.tscn" id="3_alii3"]
[ext_resource type="Script" uid="uid://tl5uknwddbde" path="res://GDscripts/map.gd" id="3_p4c8d"]
[ext_resource type="Script" uid="uid://cjapr132u6t1d" path="res://GDscripts/camera_2d.gd" id="4_hy2kt"]
[ext_resource type="Texture2D" uid="uid://ipbstcnjhr21" path="res://Sprites/SkyNight.webp" id="4_xqdar"]
[ext_resource type="Texture2D" uid="uid://cn1qtikybj1qk" path="res://Sprites/Stars.webp" id="5_xqdar"]
[ext_resource type="Texture2D" uid="uid://bmsh110yu2yuv" path="res://Sprites/part.webp" id="6_xnm3i"]
[ext_resource type="PackedScene" uid="uid://d2kk01fkqiluh" path="res://Scenes/entity.tscn" id="9_xqdar"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rr1si"]
texture = ExtResource("5_xqdar")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_xqdar"]
tile_size = Vector2i(256, 256)
sources/1 = SubResource("TileSetAtlasSource_rr1si")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xqdar"]
texture = ExtResource("6_xnm3i")
texture_region_size = Vector2i(48, 134)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_xnm3i"]
tile_size = Vector2i(48, 124)
sources/0 = SubResource("TileSetAtlasSource_xqdar")

[node name="GameWorld" type="Node2D" unique_id=118282427]
script = ExtResource("1_qvgq0")

[node name="map" parent="." unique_id=1331073335 instance=ExtResource("1_0nejw")]
script = ExtResource("3_p4c8d")

[node name="Background" type="Node2D" parent="." unique_id=1601691515]

[node name="TextureRect" type="TextureRect" parent="Background" unique_id=1338773450]
show_behind_parent = true
offset_left = -10000.0
offset_top = -104.0
offset_right = -9744.0
offset_bottom = 152.0
scale = Vector2(80, 5)
texture = ExtResource("4_xqdar")

[node name="TileMapLayer" type="TileMapLayer" parent="Background" unique_id=370963229]
show_behind_parent = true
position = Vector2(-1024, -104)
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAABAAAAAQAAAAAAAAACAAAAAQAAAAAAAAADAAAAAQAAAAAAAAAEAAAAAQAAAAAAAAAFAAAAAQAAAAAAAAAGAAAAAQAAAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAGAAQAAQAAAAAAAAAFAAQAAQAAAAAAAAAEAAQAAQAAAAAAAAADAAQAAQAAAAAAAAACAAQAAQAAAAAAAAABAAQAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAEAAQAAAAAAAAACAAMAAQAAAAAAAAACAAIAAQAAAAAAAAACAAEAAQAAAAAAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAABAAMAAQAAAAAAAAADAAEAAQAAAAAAAAADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAEAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAEAAQAAAAAAAAAIAAAAAQAAAAAAAAAJAAAAAQAAAAAAAAAKAAAAAQAAAAAAAAALAAAAAQAAAAAAAAAMAAAAAQAAAAAAAAANAAAAAQAAAAAAAAAOAAAAAQAAAAAAAAAPAAAAAQAAAAAAAAAQAAAAAQAAAAAAAAARAAAAAQAAAAAAAAASAAAAAQAAAAAAAAATAAAAAQAAAAAAAAAUAAAAAQAAAAAAAAAVAAAAAQAAAAAAAAAWAAAAAQAAAAAAAAAXAAAAAQAAAAAAAAAYAAAAAQAAAAAAAAAZAAAAAQAAAAAAAAAaAAAAAQAAAAAAAAAbAAAAAQAAAAAAAAAcAAAAAQAAAAAAAAAdAAAAAQAAAAAAAAAeAAAAAQAAAAAAAAAfAAAAAQAAAAAAAAAgAAAAAQAAAAAAAAAhAAAAAQAAAAAAAAAiAAAAAQAAAAAAAAAjAAAAAQAAAAAAAAAkAAAAAQAAAAAAAAAlAAAAAQAAAAAAAAAmAAAAAQAAAAAAAAAnAAAAAQAAAAAAAAAoAAAAAQAAAAAAAAApAAAAAQAAAAAAAAAqAAAAAQAAAAAAAAArAAAAAQAAAAAAAAAsAAAAAQAAAAAAAAAsAAEAAQAAAAAAAAAsAAIAAQAAAAAAAAAsAAMAAQAAAAAAAAAsAAQAAQAAAAAAAAArAAQAAQAAAAAAAAAqAAQAAQAAAAAAAAApAAQAAQAAAAAAAAAoAAQAAQAAAAAAAAAnAAQAAQAAAAAAAAAmAAQAAQAAAAAAAAAlAAQAAQAAAAAAAAAkAAQAAQAAAAAAAAAjAAQAAQAAAAAAAAAiAAQAAQAAAAAAAAAhAAQAAQAAAAAAAAAgAAQAAQAAAAAAAAAfAAQAAQAAAAAAAAAeAAQAAQAAAAAAAAAdAAQAAQAAAAAAAAAcAAQAAQAAAAAAAAAbAAQAAQAAAAAAAAAaAAQAAQAAAAAAAAAZAAQAAQAAAAAAAAAYAAQAAQAAAAAAAAAXAAQAAQAAAAAAAAAWAAQAAQAAAAAAAAAVAAQAAQAAAAAAAAAUAAQAAQAAAAAAAAATAAQAAQAAAAAAAAASAAQAAQAAAAAAAAARAAQAAQAAAAAAAAAQAAQAAQAAAAAAAAAPAAQAAQAAAAAAAAAOAAQAAQAAAAAAAAANAAQAAQAAAAAAAAAMAAQAAQAAAAAAAAALAAQAAQAAAAAAAAAKAAQAAQAAAAAAAAAJAAQAAQAAAAAAAAAIAAQAAQAAAAAAAAD//wQAAQAAAAAAAAD+/wQAAQAAAAAAAAD9/wQAAQAAAAAAAAD8/wQAAQAAAAAAAAD7/wQAAQAAAAAAAAD6/wQAAQAAAAAAAAD5/wQAAQAAAAAAAAD4/wQAAQAAAAAAAAD3/wQAAQAAAAAAAAD2/wQAAQAAAAAAAAD1/wQAAQAAAAAAAAD0/wQAAQAAAAAAAADz/wQAAQAAAAAAAADy/wQAAQAAAAAAAADx/wQAAQAAAAAAAADw/wQAAQAAAAAAAADv/wQAAQAAAAAAAADu/wQAAQAAAAAAAADt/wQAAQAAAAAAAADs/wQAAQAAAAAAAADr/wQAAQAAAAAAAADq/wQAAQAAAAAAAADp/wQAAQAAAAAAAADo/wQAAQAAAAAAAADn/wQAAQAAAAAAAADm/wQAAQAAAAAAAADl/wQAAQAAAAAAAADk/wQAAQAAAAAAAADj/wQAAQAAAAAAAADi/wQAAQAAAAAAAADh/wQAAQAAAAAAAADg/wQAAQAAAAAAAADf/wQAAQAAAAAAAADe/wQAAQAAAAAAAADd/wQAAQAAAAAAAADd/wMAAQAAAAAAAADd/wIAAQAAAAAAAADd/wEAAQAAAAAAAADd/wAAAQAAAAAAAADe/wAAAQAAAAAAAADf/wAAAQAAAAAAAADg/wAAAQAAAAAAAADh/wAAAQAAAAAAAADi/wAAAQAAAAAAAADj/wAAAQAAAAAAAADk/wAAAQAAAAAAAADl/wAAAQAAAAAAAADm/wAAAQAAAAAAAADn/wAAAQAAAAAAAADo/wAAAQAAAAAAAADp/wAAAQAAAAAAAADq/wAAAQAAAAAAAADr/wAAAQAAAAAAAADs/wAAAQAAAAAAAADt/wAAAQAAAAAAAADu/wAAAQAAAAAAAADv/wAAAQAAAAAAAADw/wAAAQAAAAAAAADx/wAAAQAAAAAAAADy/wAAAQAAAAAAAADz/wAAAQAAAAAAAAD0/wAAAQAAAAAAAAD1/wAAAQAAAAAAAAD2/wAAAQAAAAAAAAD3/wAAAQAAAAAAAAD4/wAAAQAAAAAAAAD5/wAAAQAAAAAAAAD6/wAAAQAAAAAAAAD7/wAAAQAAAAAAAAD8/wAAAQAAAAAAAAD9/wAAAQAAAAAAAAD+/wAAAQAAAAAAAAD//wAAAQAAAAAAAAD1/wMAAQAAAAAAAAD1/wIAAQAAAAAAAAD1/wEAAQAAAAAAAAD0/wEAAQAAAAAAAADz/wEAAQAAAAAAAADy/wEAAQAAAAAAAADx/wEAAQAAAAAAAADw/wEAAQAAAAAAAADv/wEAAQAAAAAAAADu/wEAAQAAAAAAAADt/wEAAQAAAAAAAADs/wEAAQAAAAAAAADr/wEAAQAAAAAAAADq/wEAAQAAAAAAAADp/wEAAQAAAAAAAADo/wEAAQAAAAAAAADn/wEAAQAAAAAAAADm/wEAAQAAAAAAAADl/wEAAQAAAAAAAADk/wEAAQAAAAAAAADj/wEAAQAAAAAAAADi/wEAAQAAAAAAAADh/wEAAQAAAAAAAADg/wEAAQAAAAAAAADf/wEAAQAAAAAAAADe/wEAAQAAAAAAAADe/wIAAQAAAAAAAADe/wMAAQAAAAAAAADf/wMAAQAAAAAAAADf/wIAAQAAAAAAAADg/wIAAQAAAAAAAADg/wMAAQAAAAAAAADh/wMAAQAAAAAAAADh/wIAAQAAAAAAAADi/wIAAQAAAAAAAADi/wMAAQAAAAAAAADj/wMAAQAAAAAAAADj/wIAAQAAAAAAAADk/wIAAQAAAAAAAADk/wMAAQAAAAAAAADl/wMAAQAAAAAAAADl/wIAAQAAAAAAAADm/wIAAQAAAAAAAADm/wMAAQAAAAAAAADn/wMAAQAAAAAAAADn/wIAAQAAAAAAAADo/wIAAQAAAAAAAADo/wMAAQAAAAAAAADp/wMAAQAAAAAAAADp/wIAAQAAAAAAAADq/wIAAQAAAAAAAADq/wMAAQAAAAAAAADr/wMAAQAAAAAAAADr/wIAAQAAAAAAAADs/wIAAQAAAAAAAADs/wMAAQAAAAAAAADt/wMAAQAAAAAAAADt/wIAAQAAAAAAAADu/wIAAQAAAAAAAADu/wMAAQAAAAAAAADv/wMAAQAAAAAAAADv/wIAAQAAAAAAAADw/wIAAQAAAAAAAADw/wMAAQAAAAAAAADx/wMAAQAAAAAAAADx/wIAAQAAAAAAAADy/wIAAQAAAAAAAADy/wMAAQAAAAAAAADz/wMAAQAAAAAAAADz/wIAAQAAAAAAAAD0/wIAAQAAAAAAAAD0/wMAAQAAAAAAAAD2/wEAAQAAAAAAAAD2/wIAAQAAAAAAAAD2/wMAAQAAAAAAAAD3/wMAAQAAAAAAAAD3/wIAAQAAAAAAAAD3/wEAAQAAAAAAAAD4/wEAAQAAAAAAAAD4/wIAAQAAAAAAAAD4/wMAAQAAAAAAAAD5/wMAAQAAAAAAAAD5/wIAAQAAAAAAAAD5/wEAAQAAAAAAAAD6/wEAAQAAAAAAAAD6/wIAAQAAAAAAAAD6/wMAAQAAAAAAAAD7/wMAAQAAAAAAAAD7/wIAAQAAAAAAAAD7/wEAAQAAAAAAAAD8/wEAAQAAAAAAAAD8/wIAAQAAAAAAAAD8/wMAAQAAAAAAAAD9/wMAAQAAAAAAAAD9/wIAAQAAAAAAAAD9/wEAAQAAAAAAAAD+/wEAAQAAAAAAAAD+/wIAAQAAAAAAAAD+/wMAAQAAAAAAAAD//wMAAQAAAAAAAAD//wIAAQAAAAAAAAD//wEAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAEAAQAAAAAAAAAJAAEAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAIAAQAAAAAAAAALAAEAAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAAMAAMAAQAAAAAAAAAMAAIAAQAAAAAAAAAMAAEAAQAAAAAAAAANAAEAAQAAAAAAAAANAAIAAQAAAAAAAAANAAMAAQAAAAAAAAAOAAMAAQAAAAAAAAAOAAIAAQAAAAAAAAAOAAEAAQAAAAAAAAAPAAEAAQAAAAAAAAAPAAIAAQAAAAAAAAAPAAMAAQAAAAAAAAAQAAMAAQAAAAAAAAAQAAIAAQAAAAAAAAAQAAEAAQAAAAAAAAARAAEAAQAAAAAAAAARAAIAAQAAAAAAAAARAAMAAQAAAAAAAAASAAMAAQAAAAAAAAASAAIAAQAAAAAAAAASAAEAAQAAAAAAAAATAAEAAQAAAAAAAAATAAIAAQAAAAAAAAATAAMAAQAAAAAAAAAUAAMAAQAAAAAAAAAUAAIAAQAAAAAAAAAUAAEAAQAAAAAAAAAVAAEAAQAAAAAAAAAVAAIAAQAAAAAAAAAVAAMAAQAAAAAAAAAWAAMAAQAAAAAAAAAWAAIAAQAAAAAAAAAWAAEAAQAAAAAAAAAXAAEAAQAAAAAAAAAXAAIAAQAAAAAAAAAXAAMAAQAAAAAAAAAYAAMAAQAAAAAAAAAYAAIAAQAAAAAAAAAYAAEAAQAAAAAAAAAZAAEAAQAAAAAAAAAZAAIAAQAAAAAAAAAZAAMAAQAAAAAAAAAaAAMAAQAAAAAAAAAaAAIAAQAAAAAAAAAaAAEAAQAAAAAAAAAbAAEAAQAAAAAAAAAbAAIAAQAAAAAAAAAbAAMAAQAAAAAAAAAcAAMAAQAAAAAAAAAcAAIAAQAAAAAAAAAcAAEAAQAAAAAAAAAdAAEAAQAAAAAAAAAdAAIAAQAAAAAAAAAdAAMAAQAAAAAAAAAeAAMAAQAAAAAAAAAeAAIAAQAAAAAAAAAeAAEAAQAAAAAAAAAfAAEAAQAAAAAAAAAfAAIAAQAAAAAAAAAfAAMAAQAAAAAAAAAgAAMAAQAAAAAAAAAgAAIAAQAAAAAAAAAgAAEAAQAAAAAAAAAhAAEAAQAAAAAAAAAhAAIAAQAAAAAAAAAhAAMAAQAAAAAAAAAiAAMAAQAAAAAAAAAiAAIAAQAAAAAAAAAiAAEAAQAAAAAAAAAjAAEAAQAAAAAAAAAjAAIAAQAAAAAAAAAjAAMAAQAAAAAAAAAkAAMAAQAAAAAAAAAkAAIAAQAAAAAAAAAkAAEAAQAAAAAAAAAlAAEAAQAAAAAAAAAlAAIAAQAAAAAAAAAlAAMAAQAAAAAAAAAmAAMAAQAAAAAAAAAmAAIAAQAAAAAAAAAmAAEAAQAAAAAAAAAnAAEAAQAAAAAAAAAnAAIAAQAAAAAAAAAnAAMAAQAAAAAAAAAoAAMAAQAAAAAAAAAoAAIAAQAAAAAAAAAoAAEAAQAAAAAAAAApAAEAAQAAAAAAAAApAAIAAQAAAAAAAAApAAMAAQAAAAAAAAAqAAMAAQAAAAAAAAAqAAIAAQAAAAAAAAAqAAEAAQAAAAAAAAArAAEAAQAAAAAAAAArAAIAAQAAAAAAAAArAAMAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_xqdar")

[node name="TileMapLayer2" type="TileMapLayer" parent="Background" unique_id=562819719]
show_behind_parent = true
texture_filter = 1
position = Vector2(0, 910)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAD+////AAAAAAAAAAD8////AAAAAAAAAAD9////AAAAAAAAAAD/////AAAAAAAAAAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAEAP//AAAAAAAAAAD7////AAAAAAAAAAAFAP//AAAAAAAAAAAGAP//AAAAAAAAAAAHAP//AAAAAAAAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAKAP//AAAAAAAAAAALAP//AAAAAAAAAAAMAP//AAAAAAAAAAANAP//AAAAAAAAAAAOAP//AAAAAAAAAAAPAP//AAAAAAAAAAAQAP//AAAAAAAAAAARAP//AAAAAAAAAAASAP//AAAAAAAAAAATAP//AAAAAAAAAAAUAP//AAAAAAAAAAAVAP//AAAAAAAAAAAWAP//AAAAAAAAAAAXAP//AAAAAAAAAAAYAP//AAAAAAAAAAAZAP//AAAAAAAAAAAaAP//AAAAAAAAAAAbAP//AAAAAAAAAAAcAP//AAAAAAAAAAAdAP//AAAAAAAAAAAeAP//AAAAAAAAAAAfAP//AAAAAAAAAAAgAP//AAAAAAAAAAAhAP//AAAAAAAAAAAiAP//AAAAAAAAAAAjAP//AAAAAAAAAAAkAP//AAAAAAAAAAAlAP//AAAAAAAAAAAmAP//AAAAAAAAAAAnAP//AAAAAAAAAAAoAP//AAAAAAAAAAApAP//AAAAAAAAAAAqAP//AAAAAAAAAAD6////AAAAAAAAAAD5////AAAAAAAAAAD4////AAAAAAAAAAD3////AAAAAAAAAAD2////AAAAAAAAAAD1////AAAAAAAAAAD0////AAAAAAAAAADz////AAAAAAAAAADy////AAAAAAAAAADx////AAAAAAAAAADw////AAAAAAAAAADv////AAAAAAAAAADu////AAAAAAAAAADt////AAAAAAAAAADs////AAAAAAAAAADr////AAAAAAAAAADq////AAAAAAAAAADp////AAAAAAAAAADo////AAAAAAAAAADn////AAAAAAAAAADm////AAAAAAAAAADl////AAAAAAAAAADk////AAAAAAAAAADj////AAAAAAAAAADi////AAAAAAAAAADh////AAAAAAAAAADg////AAAAAAAAAADf////AAAAAAAAAADe////AAAAAAAAAADd////AAAAAAAAAADc////AAAAAAAAAADb////AAAAAAAAAADa////AAAAAAAAAADZ////AAAAAAAAAADY////AAAAAAAAAADX////AAAAAAAAAAA=")
tile_set = SubResource("TileSet_xnm3i")

[node name="ColorRect2" type="ColorRect" parent="Background" unique_id=1239728247]
visible = false
offset_left = -96.0
offset_top = 449.0
offset_right = 96.0
offset_bottom = 641.0
color = Color(0, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="Background" unique_id=32633618]
visible = false
offset_left = -288.0
offset_top = 257.0
offset_right = -96.0
offset_bottom = 449.0
color = Color(0, 0, 0, 1)

[node name="player" parent="." unique_id=1096313570 instance=ExtResource("3_alii3")]
position = Vector2(0, 545)

[node name="Camera2D" type="Camera2D" parent="." unique_id=422631650]
position = Vector2(0, 520)
script = ExtResource("4_hy2kt")

[node name="EnemyChoice" type="Node2D" parent="." unique_id=229126439]

[node name="Entity" parent="EnemyChoice" unique_id=1896997183 instance=ExtResource("9_xqdar")]

[node name="Entity2" parent="EnemyChoice" unique_id=717248869 instance=ExtResource("9_xqdar")]
position = Vector2(-1, 0)

[node name="Entity3" parent="EnemyChoice" unique_id=1478902055 instance=ExtResource("9_xqdar")]
position = Vector2(823, 507)

[node name="Entity4" parent="EnemyChoice" unique_id=1024520710 instance=ExtResource("9_xqdar")]
position = Vector2(823, 507)

[node name="Entity5" parent="EnemyChoice" unique_id=1549524936 instance=ExtResource("9_xqdar")]
position = Vector2(823, 507)

[node name="Entity6" parent="EnemyChoice" unique_id=161193564 instance=ExtResource("9_xqdar")]
position = Vector2(823, 507)
